# adventOfCode24

./: .gitignore  CMakeLists.txt  create_next_day.py  graphics_utils.h  main.cpp  utilities.h
day1/: day1.cpp
day10/: day10.cpp
day11/: day11.cpp  day11p2.cpp
day12/: day12.cpp
day13/: day13.cpp  input.test
day14/: day14.cpp
day15/: day15.cpp  day15p2.cpp  input2.test
day16/: day16.cpp  day16_backup_astar.cpp
day17/: day17.cpp  input.test
day18/: day18.cpp
day19/: day19.cpp
day2/: day2.cpp  input.txt
day20/: day20.cpp  day20p2.cpp
day21/: day21.cpp  input.test
day22/: day22.cpp
day23/: day23.cpp  day23p2.cpp
day24/: day24.cpp  day24p2_not_mine.cpp
day3/: day3.cpp
day4/: day4.cpp  day4p2.cpp
day5/: day5.cpp
day6/: day6.cpp
day7/: day7.cpp
day8/: day8.cpp
day9/: day9.cpp  day9p2.cpp
