cmake_minimum_required(VERSION 3.29)
project(adventOfCode24)

set(CMAKE_CXX_STANDARD 23)

add_executable(adventOfCode24
        utilities.h
#        day1/day1.cpp
#        day2/day2.cpp
#        day3/day3.cpp
#        day4/day4.cpp
#        day4/day4p2.cpp
#        day5/day5.cpp
        day6/day6.cpp
)
