cmake_minimum_required(VERSION 3.29)
project(adventOfCode24)

set(CMAKE_CXX_STANDARD 23)

add_executable(adventOfCode24
        utilities.h
#        day1/day1.cpp
#        day2/day2.cpp
#        day3/day3.cpp
#        day4/day4.cpp
#        day4/day4p2.cpp
#        day5/day5.cpp
#        day6/day6.cpp
#        day7/day7.cpp
#        day8/day8.cpp
#        day9/day9.cpp
#        day9/day9p2.cpp
#         day10/day10.cpp
#         day11/day11.cpp
         day11/day11p2.cpp
)
